--- a/MitreAttackAssessmentApp/requirements.txt
+++ b/MitreAttackAssessmentApp/requirements.txt
@@ -1,10 +1,13 @@
 antlr4-python3-runtime==4.8
+bcrypt==3.2.0
 certifi==2020.11.8
+cffi==1.14.4
 chardet==3.0.4
 click==7.1.2
 dnspython==2.0.0
 email-validator==1.1.2
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
 idna==2.10
@@ -16,6 +19,7 @@ mysql-connector-python==8.0.22
 mysqlclient==2.0.1
 numpy==1.19.4
 protobuf==3.14.0
+pycparser==2.20
 pytz==2020.4
 requests==2.25.0
 simplejson==3.17.2
